--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "reader_web_service"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-
+loguru = "^0.7.2"
 
 [build-system]
 requires = ["poetry-core"]
