--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,14 @@ packages = [{include = "reader_web_service"}]
 python = "^3.11"
 loguru = "^0.7.2"
 async-timeout = "^4.0.3"
+selenium = "^4.18.1"
+pyvirtualdisplay = "^3.0"
+selenium-screenshot = "^2.1.0"
+fastapi = "^0.109.2"
+uvicorn = "^0.27.1"
+telegraph = {extras = ["aio"], version = "^2.2.0"}
+html-telegraph-poster = "^0.5.0"
+pyroscope-io = "^0.8.5"
 
 [build-system]
 requires = ["poetry-core"]
