--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ uvicorn = "^0.27.1"
 telegraph = {extras = ["aio"], version = "^2.2.0"}
 html-telegraph-poster = "^0.5.0"
 pyroscope-io = "^0.8.5"
+notifiers = "^1.3.3"
 
 [build-system]
 requires = ["poetry-core"]
